--- a/src/app/src/_modules/home/home-template/home-template.component.html
+++ b/src/app/src/_modules/home/home-template/home-template.component.html
@@ -1,81 +1,5 @@
-<!-- Header -->
-<div class="container-fluid">
-  <div class="row">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light col-lg-12">
-      <a class="navbar-brand" href="#">Học Chết Mẹ</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse " id="navbarSupportedContent">
-        <ul class="navbar-nav col-lg-6  col-md-4 col-sm-2 col-xs-1  ">
-            <div>
-            <li class="nav-item dropdown mr-3 pr-3">
-              <div class="d-flex" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                aria-expanded="false">
-                <a class="btn pr-0 d-flex justify-content-center"><i class="fa fa-th mr-2 py-1"></i>
-                  Categroies              
-                </a>
-                  
-              </div>
-
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" routerLink="/cart">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            </div>
-              <form class="form-inline my-2 my-lg-0 w-100 ml-2">
-                <div class="search-group d-flex w-100">
-                  <input class="px-1 search-group-input m-0 w-100" type="search" placeholder="Search for anything"
-                    aria-label="Search">
-                    
-                  <span class="search-group-btn btn">
-                    <i class="fa fa-search"></i>
-                  </span>
-                </div>
-              </form>
-            
-        </ul>
-
-
-        <ul class="navbar-nav w-50 col-5">
-         
-              <div class="dropdownRight my-lg-1 ml-auto">
-                  <li class="dropbtnRight btn btn-info my-0">Become Instructor</li>
-                  <div class="dropdownRight-content">
-                    <p class="text-justify py-2 px-2 dropdownRight-text">Turn what you know into an opportunity and reach millions around the world.
-                      </p>
-                    <a class="btn">Learn more</a>
-                  </div>
-                </div> 
-            
-            <div class="navbar-button d-flex ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link btn btn-login" href="#">Log in</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link btn btn-signup" href="#">Sign up</a>
-                    
-                  </li>
-                  <li class="nav-item">
-                    <i class="fa fa-cart-plus btn my-1 lead cart-icon"></i>
-                  </li>
-            </div>
-            
-          
-        </ul>
-      </div>
-    </nav>
-  </div>
-</div>
-
-
-<!-- END HEADER -->
+<!--Navbar-->
+<app-header></app-header>
+<!--/.Navbar-->
 <router-outlet></router-outlet>
-<!-- FOOTER -->
-<footer style="height:100px;background-color:black" class="text-white">Footer</footer>
-<!-- END FOOTER -->
+<app-footer></app-footer>
