--- a/src/app/src/_modules/home/home-page/home-page.component.html
+++ b/src/app/src/_modules/home/home-page/home-page.component.html
@@ -1,27 +1,373 @@
 <!-- Carousel -->
-  <section class="container-fluid">
-    <div class="row">
-      <div class="carousel d-flex col-xs-1 col-md-3 col-lg-12">
-        <div class="carousel-text col-xs-1 col-md-3 col-lg-4">
-              <h3 class="display-4">Learn everything with simple clicks</h3>
-              <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore numquam consequatur minus autem. Modi eaque soluta, obcaecati ipsa vitae similique sit ea, laboriosam dolores aliquam, nisi temporibus! Dolorem, architecto explicabo!</p>         
-        </div>
-      </div>
+
+
+<section class="cover">
+    <div class="cover_container">
+        <h1 class="cover__title">Learn on your schedule</h1>
+        <p class="cover__detail">Study any topic, anytime. Explore thousands of courses for as low as $19.99</p>
+        <form action="" class="form__cover_search">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="What do you want to learn?">
+                <div class="input-group-append">
+                    <span class="input-group-text">
+                        <i class="fa fa-search"></i>
+                    </span>
+                </div>
+            </div>
+        </form>
     </div>
-  </section>
+</section>
 <!-- End CarouSel -->
 <!-- Course Catagories -->
-<div class="container-fluid">
-  <div class="row">
-    <app-course-list></app-course-list>
-  </div>
-</div>
+<section class="container-fluid">
+    <div class="intro">
+        <div class="intro_content d-flex">
+            <div class="intro_detail">
+            <div class="row m-0">
+                <div class="intro_icon d-inline-block">
+                    <i class="fa fa-bullseye"></i>
+                </div>
+                <div class="intro_sub-detail d-inline-block">
+                    <b>80,000 online courses</b>
+                    <p>Explore a variety of fresh topics</p>
+                </div>
+            </div>
+            
+            </div>
+            <div class="intro_detail">
+                <div class="row m-0">
+                    <div class="intro_icon">
+                        <i class="fa fa-spinner"></i>
+                    </div>
+                    <div class="intro_sub-detail">
+                        <b>Expert instruction</b>
+                        <p>Find the right instructor for you</p>
+                    </div>
+                </div>
+            
+            
+            </div>
+            <div class="intro_detail">
+                <div class="row m-0">
+                    <div class="intro_icon">
+                        <i class="fa fa-refresh" ></i>
+                    </div>
+                    <div class="intro_sub-detail">
+                        <b>Lifetime access</b>
+                        <p>Learn on your schedule</p>
+                    </div>
+                </div>
+            
+            
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<app-course-list></app-course-list>
+
+
 <!-- End Course Catagories -->
 
 <!-- Best View Code -->
+<section class="view container-fluid">
+    <div class="view_content">
+        <h5>Students are viewing</h5>
+        <div class="owl-carousel owl-theme clonex2-carousel">
+            <div class="card">
+                <img class="card-img-top" src="./img/kh13.jpg" alt="kh1" />
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <h4 class="card-title">The Ultimate MySQL Bootcamp: Go from SQL Beginner to Expert</h4>
+                        <p class="card-text">Colt Steele Ian Schoonover</p>
+                        <span class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-o"></i>
+                        </span>
+                        <span class="number_average">4.6</span>
+                        <span class="number_rating">(11.597)</span>
+                        <p class="price">
+                            <span>$179.99</span>
+                            <span>$9.99</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="./img/kh8.jpg" alt="kh1" />
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <h4 class="card-title">Learning Python for Data Analysis and Visualization</h4>
+                        <p class="card-text">Jose Portilla</p>
+                        <span class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-o"></i>
+                        </span>
+                        <span class="number_average">4.3</span>
+                        <span class="number_rating">(11.297)</span>
+                        <p class="price">
+                            <span>$179.99</span>
+                            <span>$9.99</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="./img/kh9.jpg" alt="kh1" />
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <h4 class="card-title">Advanced CSS and Sass: Flexbox, Grid, Animations and More!</h4>
+                        <p class="card-text">Jonas Schmedtmann</p>
+                        <span class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-o"></i>
+                        </span>
+                        <span class="number_average">4.8</span>
+                        <span class="number_rating">(6.284)</span>
+                        <p class="price">
+                            <span>$179.99</span>
+                            <span>$9.99</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="./img/kh10.jpg" alt="kh1" />
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <h4 class="card-title">Modern JavaScript From The Beginning</h4>
+                        <p class="card-text">Brad Traversy</p>
+                        <span class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-o"></i>
+                        </span>
+                        <span class="number_average">4.7</span>
+                        <span class="number_rating">(5.284)</span>
+                        <p class="price">
+                            <span>$179.99</span>
+                            <span>$9.99</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="./img/kh11.jpg" alt="kh1" />
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <h4 class="card-title">Bootstrap 4 From Scratch With 5 Projects</h4>
+                        <p class="card-text">Brad Traversy</p>
+                        <span class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-o"></i>
+                        </span>
+                        <span class="number_average">4.8</span>
+                        <span class="number_rating">(10.284)</span>
+                        <p class="price">
+                            <span>$179.99</span>
+                            <span>$9.99</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <img class="card-img-top" src="./img/kh12.jpg" alt="kh1" />
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <h4 class="card-title">iOS 12 & Swift - The Complete iOS App Development Bootcamp</h4>
+                        <p class="card-text">Angela Yu</p>
+                        <span class="star">
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i><i class="fa fa-star"></i>
+                            <i class="fa fa-star"></i>
+                            <i class="fa fa-star-half-o"></i>
+                        </span>
+                        <span class="number_average">4.8</span>
+                        <span class="number_rating">(1.284)</span>
+                        <p class="price">
+                            <span>$179.99</span>
+                            <span>$9.99</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 <!-- End Best View Code -->
 
 <!-- FeedBack -->
-
+<section class="student container-fluid">
+    <div class="student_content">
+        <h4>What our students have to say</h4>
+        <div class="owl-carousel owl-theme clone-carousel">
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <div class="row mr-0 ml-0 mb-3">
+                            <div class="image_student mr-3 student-1"></div>
+                            <div class="student_rating">
+                                <p class="mb-0">Oscar Javier</p>
+                                <p class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                        <p class="card-text">I had a couple of months of experience trading without consistent results. After taking this
+                            course I'm pretty confident that I'll be a better trader and know better when to enter a trade, how to put my stop
+                            loss and take profit, how many lots to trade and much more.</p>
+                        <p>
+                            <a href="" class="student_course">Forex Trading A-Z™ - With LIVE Examples of Forex Trading</a><br/>
+                            In <a href="" class="student_class">BUSINESS</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <div class="row mr-0 ml-0 mb-3">
+                            <div class="image_student student-2 mr-3"></div>
+                            <div class="student_rating">
+                                <p class="mb-0">Estelle</p>
+                                <p class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                        <p class="card-text">My first complete Photoshop for Designing t-shirts course done! I am not a designer at all, but
+                            after taking this course I really felt like a professional with enough confidence to now go out and design for the
+                            real world. Learned SO much! thank you!</p>
+                        <p>
+                            <a href="" class="student_course">Bestselling T-shirt Design Masterclass With Adobe Photoshop</a><br />
+                            In <a href="" class="student_class">DESIGN</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <div class="row mr-0 ml-0 mb-3">
+                            <div class="image_student student-3 mr-3"></div>
+                            <div class="student_rating">
+                                <p class="mb-0">Mrinal</p>
+                                <p class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                        <p class="card-text">Great course for beginners as well as working professionals. I'm working as a UI developer for
+                            last 2 years and worked on different javascript frameworks but the clarity of concepts which I got after taking
+                            this course is exceptional which I was not having previously.</p>
+                        <p>
+                            <a href="" class="student_course">Angular & NodeJS - The MEAN Stack Guide</a><br />
+                            In <a href="" class="student_class">DEVELOPMENT</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <div class="row mr-0 ml-0 mb-3">
+                            <div class="image_student student-4 mr-3"></div>
+                            <div class="student_rating">
+                                <p class="mb-0">Flávio</p>
+                                <p class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                        <p class="card-text">Very explained even for a short course. It's not for full understanding, but it works perfectly as
+                            an introduction for the subject. And you can really build a robot after taking this course.</p>
+                        <p>
+                            <a href="" class="student_course">Robotics for Beginners-Build Time Control Robot from scratch</a><br />
+                            In <a href="" class="student_class">IT & SOFTWARE</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <div class="row mr-0 ml-0 mb-3">
+                            <div class="image_student student-5 mr-3"></div>
+                            <div class="student_rating">
+                                <p class="mb-0">Angeles</p>
+                                <p class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                        <p class="card-text">I didn't know anything at all about FB ads for this course and have a client that is wanting to
+                            start using them. After taking this course i feel like I can help them and so much more confident in coming up with
+                            a strategy.</p>
+                        <p>
+                            <a href="" class="student_course">The Complete Facebook Ads Training (Hands On)</a><br />
+                            In <a href="" class="student_class">MARKETING</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <div class="card-body_content">
+                        <div class="row mr-0 ml-0 mb-3">
+                            <div class="image_student student-6 mr-3"></div>
+                            <div class="student_rating">
+                                <p class="mb-0">Carol</p>
+                                <p class="star">
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                    <i class="fa fa-star"></i>
+                                </p>
+                            </div>
+                        </div>
+                        <p class="card-text">After studying German for about six months my spelling and grammar is good, but I was having
+                            trouble with some pronunciation. After taking this course it has really helped me pronounce certain words I was
+                            having trouble with and also have better listening skill of German speakers.</p>
+                        <p>
+                            <a href="" class="student_course">The German Alphabet</a><br />
+                            In <a href="" class="student_class">LANGUAGE</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- End FeedBack -->
