--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,180 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif; 
+    font-family: 'Roboto', sans-serif;
+  }
+  
+  /* body {
+    font-size: 15px;
+    line-height: 1.43;
+    color: #29303b;
+    background-color: #fff; } */
+  
+    html {
+      font-size: 95%;
+    }
+    
+    body {
+      font-size: 1.4rem;
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.714;
+      color: #505050;
+    }
+    
+    h1, .h1 {
+      font-size: 4rem;
+    }
+    
+    h2, .h2 {
+      font-size: 3.6rem;
+    }
+    
+    h3, .h3 {
+      font-size: 3rem;
+    }
+    
+    h4, .h4 {
+      font-size: 2.4rem;
+    }
+    
+    h5, .h5 {
+      font-size: 1.8rem;
+    }
+    
+    h6, .h6 {
+      font-size: 1.4rem;
+    }
+    
+    h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
+      font-weight: 500;
+      line-height: 1.125;
+    }
+    
+    a {
+      color: #eb1436;
+      text-decoration: none;
+      -webkit-transition: all 0.3s ease;
+      transition: all 0.3s ease;
+    }
+    a:focus, a:visited {
+      outline: none;
+      text-decoration: none;
+      color: #eb1436;
+    }
+    a:hover {
+      color: #c8102e;
+      text-decoration: none;
+    }
+    .text-white a, .theme-bg a {
+      color: #ffffff;
+    }
+    
+    .text-white {
+      color: #ffffff;
+    }
+    
+    .section {
+      float: left;
+      width: 100%;
+      clear: both;
+      position: relative;
+    }
+    
+    .section-padding {
+      padding: 115px 0;
+    }
+    .section-padding.top-padding-normal {
+      padding-top: 0;
+    }
+    .section-padding.bottom-padding-normal {
+      padding-bottom: 0;
+    }
+    
+    .section-header {
+      margin-bottom: 30px;
+    }
+    
+    .section-title {
+      margin: 0;
+    }
+    .btn {
+      /* font-size: 1.8rem; */
+      font-weight: 500;
+      color: #ffffff;
+      
+      -webkit-transition: all 0.3s ease;
+      transition: all 0.3s ease;
+      line-height: 50px;
+      padding: 0 0!important;
+      border-radius: 25px!important;
+    }
+    .btn:focus, .btn:visited, .btn:active {
+      color: #ffffff;
+      
+      outline: none;
+    }
+    .btn:hover {
+      color: #ffffff;
+      background-color: cornflowerblue;
+      outline: none;
+    }
+    
+
+.container-fluid{
+      padding-left: 0px!important;
+      padding-right: 0px!important;
+    }
+.row{
+      margin-right:0px!important ;
+      margin-left: 0px!important;
+
+  }
+  .owl-next, .owl-prev {
+    color: #00576b !important;
+    font-size: 24px !important;
+    box-shadow: 0 2px 8px 2px rgba(20, 23, 28, 0.1);
+    width: 44px;
+    height: 44px;
+    border-radius: 50% !important;
+    -webkit-border-radius: 50% !important;
+    -moz-border-radius: 50% !important;
+    -ms-border-radius: 50% !important;
+    -o-border-radius: 50% !important;
+    position: absolute;
+    top: 35%;
+    right: -20px;
+    background-color: #fff !important;
+    z-index: 2; 
+    padding-left: 17px;
+    padding-top: 4px;
+  }
+  
+  .owl-prev {
+    color: #00576b !important;
+    font-size: 24px !important;
+    box-shadow: 0 2px 8px 2px rgba(20, 23, 28, 0.1);
+    width: 44px;
+    height: 44px;
+    border-radius: 50% !important;
+    -webkit-border-radius: 50% !important;
+    -moz-border-radius: 50% !important;
+    -ms-border-radius: 50% !important;
+    -o-border-radius: 50% !important;
+    position: absolute;
+    top: 35%;
+    left: -30px;
+    background-color: #fff !important;
+    z-index: 2; }
+    .owl-item{
+      margin-right:15px;
+    }
+    .nav{
+      flex-wrap:nowrap!important;
+      padding-left: 15px;
+    }
+/* html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
